# greghonox

./: .gitignore  .pylintrc  Readme.md  bot.session  main.py  pyproject.toml  requirements.txt  session_name.session  settings.json
.streamlit/: config.toml
pages/: busca_emprego.py  call_me.py  dashboards.py  form_contact_me.py  news.py  news_now_cnn.py
pages/pages/: raw_data.py  record_data.py
pages/resources/: 2024-07-27T23-35_export.csv
pages/scripts/: __init__.py  fetch_job_campinas.py  fetch_news.py  sub_menu.py  telegram.py
playground/: emprega-campins.ipynb
