[tool.poetry]
name = "greghonox"
version = "0.1.0"
description = "My Readme"
authors = ["Gregorio honorato <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.41.0"
requests = "^2.32.3"
pylint = "^3.3.3"
black = "^24.10.0"
plotly = "^5.24.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
